--- a/views/components/search.ejs
+++ b/views/components/search.ejs
@@ -115,7 +115,7 @@
                               <%= listApartment[i].price %> VNĐ</span
                            >
                            <span class="p-1 border border-secondary rounded ml-4 bg-gradient-info"
-                              ><%= listApartment[i].acreage %></span
+                              ><%= listApartment[i].acreage %>M</span
                            >
                            <div class="content__address mt-3 mb-3">
                               <i class="fa-solid fa-location-dot mr-1"></i>
