--- a/public/styles/search.css
+++ b/public/styles/search.css
@@ -23,7 +23,9 @@ select {
    margin-bottom: 40px;
 }
 .render__apartment {
-   margin-bottom: 20px;
+   margin-bottom: 30px;
+   border-bottom: 2px solid #000;
+   padding-bottom: 20px;
 }
 .favorite__main {
    margin: 2rem 0;
@@ -63,7 +65,14 @@ select {
 .content__description p {
    font-size: 14px;
    font-weight: 400;
+   width: 70%;
+   height: 42px;
    line-height: 20px;
+   overflow: hidden;
+   display: block;
+   display: -webkit-box;
+   -webkit-box-orient: vertical;
+   -webkit-line-clamp: 2;
 }
 .favorite__container__card__inner_avatar {
    border-radius: 50%;
@@ -74,7 +83,6 @@ select {
    display: flex;
    justify-content: center;
    align-items: center;
-   width: 100%;
 }
 .button__delete_favorite {
    color: #fff;
@@ -90,9 +98,11 @@ select {
 }
 .button_hearth {
    border: 1px solid #969696;
-   padding: 5px 10px 5px 10px;
-   border-radius: 3px;
-   cursor: pointer;
+    padding: 9px 10px 5px 10px;
+    border-radius: 13px;
+    cursor: pointer;
+    width: 110px;
+    height: 45px;
 }
 .button_hearth:hover {
    background: #c82333;
