--- a/views/components/index.ejs
+++ b/views/components/index.ejs
@@ -135,7 +135,9 @@
                                     <p>Thành phố <%= listRegion1[i].city %></p>
                                  </div>
                                  <div class="home__infor-icon">
-                                    <span class="home__infor-icon_price"><%= listRegion1[i].price %> VNĐ</span>
+                                    <span class="home__infor-icon_price"
+                                       ><%= listRegion1[i].price.toLocaleString("en") %> VNĐ</span
+                                    >
                                  </div>
                               </div>
                            </div>
@@ -168,7 +170,9 @@
                                     <p>Thành phố <%= listRegion2[i].city %></p>
                                  </div>
                                  <div class="home__infor-icon">
-                                    <span class="home__infor-icon_price"><%= listRegion2[i].price %> VNĐ</span>
+                                    <span class="home__infor-icon_price"
+                                       ><%= listRegion2[i].price.toLocaleString("en").toLocaleString("en") %> VNĐ</span
+                                    >
                                     <i class="fa-regular fa-heart icon_hearth"></i>
                                  </div>
                               </div>
@@ -202,7 +206,9 @@
                                     <p>Thành phố <%= listRegion3[i].city %></p>
                                  </div>
                                  <div class="home__infor-icon">
-                                    <span class="home__infor-icon_price"><%= listRegion3[i].price %> VNĐ</span>
+                                    <span class="home__infor-icon_price"
+                                       ><%= listRegion3[i].price.toLocaleString("en") %> VNĐ</span
+                                    >
                                  </div>
                               </div>
                            </div>
